Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1122

Memory leak in axutil

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.4.0
    • None
    • util
    • None
    • Axis2-C 1.3.1, Linux 2.6.22-14-generic x86_64 GNU/Linux

    Description

      I ran the sample client "echo" in an infinite loop (i.e., while true; do ./echo; done)

      The axis2_http_server was running under Valgrind (valgrind --leak-check=full --show-reachable=yes --log-file=memLeak ./axis2_http_server)

      The memLeak log is:

      ==31921== 1,196,105 bytes in 32,770 blocks are definitely lost in loss record 7 of 7
      ==31921== at 0x4C21C16: malloc (vg_replace_malloc.c:149)
      ==31921== by 0x548228F: axutil_allocator_malloc_impl (in /bigROOM/workspace/Axis2C/lib/libaxutil.so.0.3.1)
      ==31921== by 0x548FE68: axutil_url_to_external_form (in /bigROOM/workspace/Axis2C/lib/libaxutil.so.0.3.1)
      ==31921== by 0x56B723E: axis2_http_worker_process_request (http_worker.c:512)
      ==31921== by 0x5D64C3A: axis2_svr_thread_worker_func (http_svr_thread.c:259)
      ==31921== by 0x5499892: dummy_worker (in /bigROOM/workspace/Axis2C/lib/libaxutil.so.0.3.1)
      ==31921== by 0x6196316: start_thread (in /lib/libpthread-2.6.1.so)
      ==31921== by 0x6899D5C: clone (in /lib/libc-2.6.1.so)
      ==31921==
      ==31921== LEAK SUMMARY:
      ==31921== definitely lost: 1,196,105 bytes in 32,770 blocks.
      ==31921== possibly lost: 0 bytes in 0 blocks.
      ==31921== still reachable: 1,908 bytes in 8 blocks.
      ==31921== suppressed: 0 bytes in 0 blocks.

      Attachments

        Activity

          People

            damitha Damitha N.M. Kumarage
            mnporto Mauricio Nunes Porto
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: