Fixing memory leak mentioned in Jira AXIS2C-1122